--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,6 @@ jobs:   # Define jobs to run in the workflow
     steps:      # Define the steps to execute in the job
       - name: Get code # Checkout the repository code
         run: |
-          echo: "cloning repository.."
-          echo: "{{toJson(github)}}"    #call a function not to hardcode the repo name
+          echo "cloning repository.."
+          echo "{{toJson(github)}}"    #call a function not to hardcode the repo name
           git clone https://github.com/${{github.repository}}:.git # Checkout the repository code
